--- a/SiteGBR/index.html
+++ b/SiteGBR/index.html
@@ -72,8 +72,8 @@ body {font-family: "Lato", sans-serif}
     <img src="images/logo.png" style="width: 25%; height: 25%;">
     <p></p>
     <p class="w3-opacity"><i>Welcome to GBR Componentes</i></p>
-    <p>The GBR Componentes is the newer company of a traditional empresarial group of Amazonas, the GARCIA GROUP.</p>
-    <p>Acting in the Manaus marketplace over 76 years, the GARCIA GROUP diversified itself to attempt market demand quite distinct, in the telecommunication and retransmission of TV signals areas, civil construction, imobilliary investiments and GM and Citröen representations, among others.</p>
+    <p>The GBR Componentes is the newest company of a traditional empresarial group of Amazonas, the GRUPO GARCIA.</p>
+    <p>Operating in the Manaus market for 76 years, GRUPO GARCIA has diversified to meet very different market demands in the areas of telecommunications and television signal retransmission, construction, real estate investments and representation of GM and Citröen brands, among other activities.</p>
     <p>Counting with a modern industrial park, last generation equipments and trained professionals, the GBRComponentes provides tecnological services such as audio and video producs, computing, telecommunication among others.</p>
 
     <div class="w3-row w3-padding-32">
