--- a/SiteGBR/index.html
+++ b/SiteGBR/index.html
@@ -18,15 +18,15 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <img class="w3-bar-item" src="images/logo.png" style="width: 9%; height: 9%;">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
-    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Know Us</a>
-    <a href="#produto" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Products</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contacts</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Início</a>
+    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Quem Somos</a>
+    <a href="#produto" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Produtos</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contatos</a>
 
     <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">Idioma &nbsp;<i class="fa fa-caret-down"></i></button>
+      <button class="w3-padding-large w3-button" title="More">Language &nbsp;<i class="fa fa-caret-down"></i></button>
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-          <a href="inicio.html" class="w3-bar-item w3-button"><img src="images/br.png" style="width: 5%; height: 5%;"> &nbsp; Português</a>
+          <a href="indexENG.html" class="w3-bar-item w3-button"><img src="images/eua.png" style="width: 10%; height: 10%;"> &nbsp; English</a>
       </div>
     </div>
     <!-- <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a> -->
@@ -35,9 +35,9 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#home" class="w3-bar-item w3-button w3-padding-large">Know Us</a>
-  <a href="#produto" class="w3-bar-item w3-button w3-padding-large">Products</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Contacts</a>
+  <a href="#home" class="w3-bar-item w3-button w3-padding-large">Quem Somos</a>
+  <a href="#produto" class="w3-bar-item w3-button w3-padding-large">Produtos</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Contatos</a>
   <!-- <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a> -->
 </div>
 
@@ -48,22 +48,22 @@ body {font-family: "Lato", sans-serif}
   <div class="mySlides w3-display-container w3-center">
     <img src="images/Fachada.jpg" style="width:80%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small" style="background-color: black; opacity: 0.7; border-radius: 10px;">
-      <h3 ><b>GBR Componentes</b></h3>
-      <p><b>Is a enterprise of amazon capital that offers effective solutions and competitive costs in Manufacturing Contract (MC) in diverse tecnological segments.</b></p>
+      <h3 ><b>A GBR Componentes</b></h3>
+      <p><b>é uma empresa de capital amazonense que oferece soluções eficazes e custos competitivos em Contrato de Manufatura (CM) em diversos segmentos tecnológicos.</b></p>
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="images/linha.jpg" style="width:80%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small" style="background-color: black; opacity: 0.7; border-radius: 10px;">
-      <h3><b>Quality team</b></h3>
-      <p><b>In order to achieve a better commitment with our clients, we count with a especialized team, trainded and envolved in all the phases of the process!</b></p>
+      <h3><b>Equipe de qualidade</b></h3>
+      <p><b>Para um melhor comprometimento com nossos clientes contamos com uma equipe especializada, treinada e envolvida em todas as etapas do processo !</b></p>
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="images/maq03.jpg" style="width:80%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small" style="background-color: black; opacity: 0.7; border-radius: 10px;">
-      <h3><b>High technology machines</b></h3>
-      <p><b>We use production lines designed under measure to optimize the process and ensure agility, modern equipment who ensure the product quality.</b></p>
+      <h3><b>Máquinas de alta tecnologia</b></h3>
+      <p><b>Utilizamos linhas de produção desenvolvidas sob medida para otimizar o processo e garantir agilidade, equipamentos modernos que garantem a qualidade do produto.</b></p>
     </div>
   </div>
 
@@ -71,23 +71,23 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="home">
     <img src="images/logo.png" style="width: 25%; height: 25%;">
     <p></p>
-    <p class="w3-opacity"><i>Welcome to GBR Componentes</i></p>
-    <p>The GBR Componentes is the newest company of a traditional empresarial group of Amazonas, the GRUPO GARCIA.</p>
-    <p>Operating in the Manaus market for 76 years, GRUPO GARCIA has diversified to meet very different market demands in the areas of telecommunications and television signal retransmission, construction, real estate investments and representation of GM and Citröen brands, among other activities.</p>
-    <p>Counting with a modern industrial park, last generation equipments and trained professionals, the GBRComponentes provides tecnological services such as audio and video producs, computing, telecommunication among others.</p>
-
+    <p class="w3-opacity"><i>Bem vindo à GBR Componentes</i></p>
+    <p>A GBR COMPONENTES é a mais nova empresa de um tradicional grupo empresarial do Amazonas, o GRUPO GARCIA.</p>
+    <p>Atuando no mercado de Manaus há 76 anos, o GRUPO GARCIA diversificou-se para atender demandas de mercado bastante distintas, nas áreas de telecomunicações e retransmissão de sinais televisivos, construção civil, investimentos imobiliários e representação das marcas GM e Citröen, dentre outras atividades.</p>
+    <p>Contando com um moderno parque industrial, equipamentos de última geração e profissionais capacitados, a GBR COMPONENTES presta serviços de qualidade superior, terceirizando a produção de placas de circuito para grandes empresas do Polo Industrial de Manaus.
+      GBR COMPONENTES é uma empresa local que oferece soluções eficazes e custos competitivos em Contrato de Manufatura (CM) em diversos segmentos tecnológicos como produtos de áudio e vídeo, informática, telecomunicações e outros.</p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p></p>
-        <img src="images/scroll1.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="images/scroll1.jpg" class="w3-round w3-margin-bottom" alt="Carregando" style="width:60%">
       </div>
       <div class="w3-third">
         <p></p>
-        <img src="images/scroll2.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="images/scroll2.jpg" class="w3-round w3-margin-bottom" alt="Carregando" style="width:60%">
       </div>
       <div class="w3-third">
         <p></p>
-        <img src="images/scroll3.jpg" class="w3-round" alt="Random Name" style="width:60%">
+        <img src="images/scroll3.jpg" class="w3-round" alt="Carregando" style="width:60%">
       </div>
     </div>
   </div>
@@ -95,34 +95,34 @@ body {font-family: "Lato", sans-serif}
   <!-- The produto Section -->
   <div class="w3-black" id="produto">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-center">Products</h2>
-      <p class="w3-opacity w3-center"><i>Know what we can produce !</i></p><br>
+      <h2 class="w3-center">Produtos</h2>
+      <p class="w3-opacity w3-center"><i>Conheça o que podemos produzir !</i></p><br>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-row w3-padding-32">
           <div class="w3-third">
             <p>Barebones</p>
-            <img src="images/barebone.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+            <img src="images/barebone.jpg" class="w3-round w3-margin-bottom" alt="Carregando" style="width:60%">
           </div>
           <div class="w3-third">
-            <p>Mobile Phones</p>
-            <img src="images/celular.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+            <p>Celulares</p>
+            <img src="images/celular.jpg" class="w3-round w3-margin-bottom" alt="Carregando" style="width:60%">
           </div>
           <div class="w3-third">
             <p>Desktops</p>
-            <img src="images/desktop.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+            <img src="images/desktop.jpg" class="w3-round w3-margin-bottom" alt="Carregando" style="width:60%">
           </div>
           <div class="w3-third">
             <p>Notebooks</p>
-            <img src="images/note.jpg" class="w3-round" alt="Random Name" style="width:60%">
+            <img src="images/note.jpg" class="w3-round" alt="Carregando" style="width:60%">
           </div>
           <div class="w3-third">
-            <p>Receptors</p>
-            <img src="images/receptor.jpg" class="w3-round" alt="Random Name" style="width:60%">
+            <p>Receptores</p>
+            <img src="images/receptor.jpg" class="w3-round" alt="Carregando" style="width:60%">
           </div>
           <div class="w3-third">
             <p>Motherboard</p>
-            <img src="images/motherboard.jpg" class="w3-round" alt="Random Name" style="width:60%">
+            <img src="images/motherboard.jpg" class="w3-round" alt="Carregando" style="width:60%">
           </div>
         </div>
       </div>
@@ -151,13 +151,13 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-center">Contact</h2>
-    <p class="w3-opacity w3-center"><i>Contact us ! Call or mail us !</i></p>
+    <h2 class="w3-center">Contato</h2>
+    <p class="w3-opacity w3-center"><i>Contate-nos ! Ligue ou mande um e-mail</i></p>
     <div class="w3-row">
       <div class="w3-col m6 w3-large w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i>Manaus, AM - Brasil<br>
-        <i class="fa fa-phone" style="width:30px"></i>Manaus Office: +55 92 3878-2200<br>
-        <i class="fa fa-phone" style="width:30px"></i>São Paulo Office: +55 11 3045-9717<br>
+        <i class="fa fa-phone" style="width:30px"></i> Escritório Manaus: +55 92 3878-2200<br>
+        <i class="fa fa-phone" style="width:30px"></i> Escritório São Paulo: +55 11 3045-9717<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: info@gbrcomponentes.com.br<br>
       </div>
       <!-- <div class="w3-col m6">
