Nome e att pagina facebook

--- a/SiteGBR/index.html
+++ b/SiteGBR/index.html
@@ -62,7 +62,7 @@ body {font-family: "Lato", sans-serif}
   <div class="mySlides w3-display-container w3-center">
     <img src="images/maq03.jpg" style="width:80%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small" style="background-color: black; opacity: 0.7; border-radius: 10px;">
-      <h3><b>Máquinas de alta tecnologia</b></h3>
+      <h3><b>Equipamentos de alta tecnologia</b></h3>
       <p><b>Utilizamos linhas de produção desenvolvidas sob medida para otimizar o processo e garantir agilidade, equipamentos modernos que garantem a qualidade do produto.</b></p>
     </div>
   </div>
@@ -72,7 +72,7 @@ body {font-family: "Lato", sans-serif}
     <img src="images/logo.png" style="width: 25%; height: 25%;">
     <p></p>
     <p class="w3-opacity"><i>Bem vindo à GBR Componentes</i></p>
-    <p>A GBR COMPONENTES é a mais nova empresa de um tradicional grupo empresarial do Amazonas, o GRUPO GARCIA.</p>
+    <p>A GBR COMPONENTES é uma empresa de um tradicional grupo empresarial do Amazonas, o GRUPO GARCIA.</p>
     <p>Atuando no mercado de Manaus há 76 anos, o GRUPO GARCIA diversificou-se para atender demandas de mercado bastante distintas, nas áreas de telecomunicações e retransmissão de sinais televisivos, construção civil, investimentos imobiliários e representação das marcas GM e Citröen, dentre outras atividades.</p>
     <p>Contando com um moderno parque industrial, equipamentos de última geração e profissionais capacitados, a GBR COMPONENTES presta serviços de qualidade superior, terceirizando a produção de placas de circuito para grandes empresas do Polo Industrial de Manaus.
       GBR COMPONENTES é uma empresa local que oferece soluções eficazes e custos competitivos em Contrato de Manufatura (CM) em diversos segmentos tecnológicos como produtos de áudio e vídeo, informática, telecomunicações e outros.</p>
@@ -205,7 +205,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <a href="https://www.facebook.com/pages/GBR-Componentes-da-Amazonia-Ltda/1688876811375388"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+  <a href="https://www.facebook.com/GBRComponentes/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
   <!-- <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
