--- a/SiteGBR/indexENG.html
+++ b/SiteGBR/indexENG.html
@@ -62,7 +62,7 @@ body {font-family: "Lato", sans-serif}
   <div class="mySlides w3-display-container w3-center">
     <img src="images/maq03.jpg" style="width:80%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small" style="background-color: black; opacity: 0.7; border-radius: 10px;">
-      <h3><b>High technology machines</b></h3>
+      <h3><b>High technology equipments</b></h3>
       <p><b>We use production lines designed under measure to optimize the process and ensure agility, modern equipment who ensure the product quality.</b></p>
     </div>
   </div>
@@ -205,7 +205,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <a href="https://www.facebook.com/pages/GBR-Componentes-da-Amazonia-Ltda/1688876811375388"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+  <a href="https://www.facebook.com/GBRComponentes/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
   <!-- <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
