--- a/SiteGBR/indexENG.html
+++ b/SiteGBR/indexENG.html
@@ -17,7 +17,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <img class="w3-bar-item" src="images/logo.png" style="width: 9%; height: 9%;">
+    <a href="#"><img class="w3-bar-item" src="images/logopreto.jpg" style="width: 9%; height: 9%;"></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
     <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Know Us</a>
     <a href="#produto" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Products</a>
