--- a/SiteGBR/indexENG.html
+++ b/SiteGBR/indexENG.html
@@ -17,7 +17,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#"><img class="w3-bar-item w3-button w3-padding-large" src="images/logopreto.jpg" style="width: 100px; height: 50px;"></a>
+    <a href="#"><img class="w3-bar-item w3-button w3-padding-large" src="images/logotransp.png" style="width: 100px; height: 53px;"></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large" style="position: responsive">Home</a>
     <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hide-small" style="position: responsive">Know Us</a>
     <a href="#produto" class="w3-bar-item w3-button w3-padding-large w3-hide-small" style="position: responsive">Products</a>
