--- a/SiteGBR/index.html
+++ b/SiteGBR/index.html
@@ -19,7 +19,8 @@ body {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#"><img class="w3-bar-item w3-button w3-padding-large w3-hide-small" src="images/logotransp.png" style="width: 100px; height: 53px;"></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Início</a>
-    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Quem Somos</a>
+    <a href="#knowus" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Quem Somos</a>
+    <a href="#pol" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Política e Visão</a>
     <a href="#produto" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Produtos</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contatos</a>
 
@@ -35,9 +36,12 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#home" class="w3-bar-item w3-button w3-padding-large">Quem Somos</a>
-  <a href="#produto" class="w3-bar-item w3-button w3-padding-large">Produtos</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Contatos</a>
+  <a href="#"><img class="w3-bar-item w3-button w3-padding-large w3-hide-small" src="images/logotransp.png" style="width: 100px; height: 53px;"></a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large">Início</a>
+  <a href="#knowus" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Quem Somos</a>
+  <a href="#pol" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Política e Visão</a>
+  <a href="#produto" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Produtos</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contatos</a>
   <!-- <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a> -->
 </div>
 
@@ -68,14 +72,17 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The home Section -->
+  <p></p>
+<div class="w3-black" id="knowus">
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="home">
-    <img src="images/logo.png" style="width: 25%; height: 25%;">
+    <img src="images/logotransp.png" style="width: 25%; height: 25%;">
     <p></p>
     <p class="w3-opacity"><i>Bem vindo à GBR Componentes</i></p>
     <p>A GBR COMPONENTES é uma empresa de um tradicional grupo empresarial do Amazonas, o GRUPO GARCIA.</p>
     <p>Atuando no mercado de Manaus há 76 anos, o GRUPO GARCIA diversificou-se para atender demandas de mercado bastante distintas, nas áreas de telecomunicações e retransmissão de sinais televisivos, construção civil, investimentos imobiliários e representação das marcas GM e Citröen, dentre outras atividades.</p>
     <p>Contando com um moderno parque industrial, equipamentos de última geração e profissionais capacitados, a GBR COMPONENTES presta serviços de qualidade superior, terceirizando a produção de placas de circuito para grandes empresas do Polo Industrial de Manaus.
       GBR COMPONENTES é uma empresa local que oferece soluções eficazes e custos competitivos em Contrato de Manufatura (CM) em diversos segmentos tecnológicos como produtos de áudio e vídeo, informática, telecomunicações e outros.</p>
+    <p></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p></p>
@@ -90,6 +97,52 @@ body {font-family: "Lato", sans-serif}
         <img src="images/scroll3.jpg" class="w3-round" alt="Carregando" style="width:60%">
       </div>
     </div>
+  </div>
+</div>
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="pol">
+    <h2 class="w3-center">Política de Qualidade</h2>
+    <p class="w3-opacity w3-center"><i>Conheça nossa política, missão, valores e visão!</i></p><br>
+    <div style="border-style: solid; border-color: red;">
+      <h2>Política</h2>
+      <div class="w3-container w3-content" style="max-width:800px; text-align: left;">
+        <p>A Direção da <b>GBRComponentes da Amazônia LTDA</b>, em conformidade com os requisitos
+        da Norma NBR ISO 9001:2015, se compromete em manter a melhoria contínua do seu SGQ através do atendimento em:</p>
+        <p>a) Garantir a excelência no atendimento ao cliente por meio do rigoroso controle na Qualidade em nossos processos, produtos e serviços.</p>
+        <p>b) Atender aos requisitos dos nossos clientes, legais e outros associados.</p>
+        <p>c) Gerenciar os riscos e as oportunidades que possam impactar na organização.</p>
+        <p>d) Promover o engajamento de todos colaboradores, contribuindo para um excelente resultado.</p>
+      </div>
+      <p></p>
+      <h2>Missão</h2>
+      <div class="w3-container w3-content" style="max-width:800px; text-align: left;">
+        <p>Atuar no mercado de forma ética, segura, rentável, legal, com responsabilidade social e ambiental, fornecendo
+        produtos e serviços, adequando as necessidades de nossos clientes e contribuindo para o desenvolvimento da região.</p>
+      </div>
+      <h2>Visão</h2>
+      <div class="w3-container w3-content" style="max-width:800px; text-align: left;">
+        <p>A <b>GBR</b> busca alcançar novos mercados, sendo referência no seu segmento de atuação, na prestação de serviços, respeitando requisitos legais,
+        buscando novas tecnologias, treinamento constante de nossos colaboradores e respeitando o meio ambiente</p>
+      </div>
+      <h2>Valores</h2>
+      <div class="w3-container w3-content" style="max-width:800px; text-align: left;">
+        <p><b>• Ética</b></p>
+          &nbsp;Agir de forma íntegra nos relacionamentos, respeitando as pessoas, as políticas internas e a legislação vigente.
+        <p><b>• Transparência</b></p>
+          &nbsp;Compartilhar com nossos colaboradores interno e externo informações referentes a organização.
+        <p><b>• Excelência em Produtos e Serviços - Foco no Resultado</b></p>
+          &nbsp;Oferecer soluções de alto valor agregado aos nossos clientes atendendo suas necessidades e expectativas.
+        <p><b>• Valorização do Capital Intelectual</b></p>
+          &nbsp;Contribuir para o desenvolvimento continuado dos nossos colaboradores, bem como, valorizar suas competências e contribuições para o alcance de resultados organizacionais.
+        <p><b>• Compromisso com Resultados - Foco no Resultado</b></p>
+          &nbsp;Buscar Constantemente o alcance dos objetivos propostos para obter os resultados desejados.
+        <p><b>• Sustentabilidade Social, Econômica e Ambiental</b></p>
+          &nbsp;Atuar para contribuir para o desenvolvimento da sociedade interna e externa para a sustentabilidade da GBR e para a preservação do meio ambiente.
+
+      </div>
+    </div>
+
+
+
   </div>
 
   <!-- The produto Section -->
