--- a/SiteGBR/indexENG.html
+++ b/SiteGBR/indexENG.html
@@ -19,7 +19,8 @@ body {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#"><img class="w3-bar-item w3-button w3-padding-large" src="images/logotransp.png" style="width: 100px; height: 53px;"></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large" style="position: responsive">Home</a>
-    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hide-small" style="position: responsive">Know Us</a>
+    <a href="#knowus" class="w3-bar-item w3-button w3-padding-large w3-hide-small" style="position: responsive">Know Us</a>
+    <a href="#pol" class="w3-bar-item w3-button w3-padding-large w3-hide-small" style="position: responsive">Politics and Vision</a>
     <a href="#produto" class="w3-bar-item w3-button w3-padding-large w3-hide-small" style="position: responsive">Products</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small" style="position: responsive">Contacts</a>
 
@@ -42,7 +43,8 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
+
+  <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
@@ -66,10 +68,11 @@ body {font-family: "Lato", sans-serif}
       <p><b>We use production lines designed under measure to optimize the process and ensure agility, modern equipment who ensure the product quality.</b></p>
     </div>
   </div>
-
   <!-- The home Section -->
+  <p></p>
+<div class="w3-black" id="knowus">
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="home">
-    <img src="images/logo.png" style="width: 25%; height: 25%;">
+    <img src="images/logotransp.png" style="width: 25%; height: 25%;">
     <p></p>
     <p class="w3-opacity"><i>Welcome to GBR Componentes</i></p>
     <p>The GBR Componentes is the newest company of a traditional empresarial group of Amazonas, the GRUPO GARCIA.</p>
@@ -90,6 +93,45 @@ body {font-family: "Lato", sans-serif}
         <img src="images/scroll3.jpg" class="w3-round" alt="Loading" style="width:60%">
       </div>
     </div>
+  </div>
+</div>
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="pol">
+    <h2 class = "w3-center">Quality Policy</h2>
+     <p class = "w3-opacity"><i>Learn about our politics, mission, values and vision!</i></p><br>
+    <div style="border-style: solid; border-color: red;">
+      <div class = "w3-container w3-content" style = "margin-width: 800px; text-align:left">
+      <h2 style="text-align:center;">Politics</h2>
+        <p>The Management of <b> GBRComponentes da Amazônia LTDA </b>, in accordance with the requirements of ISO 9001: 2015, commits itself to maintaining the continuous improvement of its QMS by attending:</p>
+        <p>a) Ensure excellence in customer service through strict quality control in our processes, products and services.</p>
+        <p>b) Meet the requirements of our legal and other associates.</p>
+        <p>c) Manage the risks and opportunities that may impact the organization.</p>
+        <p>d) Promote the engagement of all employees, contributing to an excellent result.</p>
+      </div>
+      <div class = "w3-container w3-content" style = "margin-width: 800px; text-align:left">
+      <h2 style="text-align:center;">Mission</h2>
+        <p>Acting in the market in an ethical, safe, profitable, legal way, with social and environmental responsibility, providing products and services, adapting the needs of our customers and contributing to the development of the region. </p>
+      </div>
+      <div class = "w3-container w3-content" style = "margin-width: 800px; text-align:left;">
+      <h2 style="text-align:center;">Vision</h2>
+        <b>GBR</b> seeks to reach new markets, being a benchmark in its segment of operations, in the provision of services, respecting legal requirements, seeking new technologies, constant training of our employees and respecting the environment </p>
+      </div>
+      <div class = "w3-container w3-content" style = "margin-width: 800px; text-align: left">
+      <h2 style="text-align:center;">Values​​</h2>
+        <p><b>• Ethics</b></p>
+          &nbsp; Act in an integral way in relationships, respecting people, internal policies and current legislation.
+        <p><b>• Transparency</b></p>
+          &nbsp; Share information about the organization with our internal and external collaborators.
+        <p><b>• Excellence in Products and Services - Focus on Outcome</b></p>
+          &nbsp; Offer solutions with high added value to our customers, meeting their needs and expectations.
+        <p><b>• Enhancing Intellectual Capital</b></p>
+          &nbsp; Contribute to the continued development of our employees, as well as to value their skills and contributions to achieve organizational results.
+        <p><b>• Commitment to Results - Focus on Outcome</b></p>
+          &nbsp; Constantly seek the achievement of the proposed goals to achieve the desired results.
+        <p><b>• Social, Economic and Environmental Sustainability</b></p>
+          &nbsp; Act to contribute to the development of internal and external society for the sustainability of GBR and for the preservation of the environment.
+      </div>
+    </div>
+
   </div>
 
   <!-- The produto Section -->
